{
    "name": "InputActions",
    "maps": [
        {
            "name": "PlayerControls",
            "id": "5f454641-5166-40af-8a65-8fa716787802",
            "actions": [
                {
                    "name": "Sprint",
                    "type": "Button",
                    "id": "78c21449-16ec-4f54-8b83-2a04facadd1f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "LockToggle",
                    "type": "Button",
                    "id": "558c37cc-d35b-4596-92d2-8d2640c38141",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "fdc1e086-99b7-4aee-942a-c4c791efb708",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseLook",
                    "type": "Value",
                    "id": "b0cbf58b-025e-46d0-b193-987a0f49dc31",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "SwitchTarget",
                    "type": "Value",
                    "id": "cc116bae-5bca-4c5b-838f-939cddf4d8c5",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "1e2c98b3-bae6-42f1-b7af-f31f47365365",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fdbaa726-d2ce-4077-833f-9d1b8f2c4141",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Sprint",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d0a27908-98bf-44f7-afb7-34e7abb6c51b",
                    "path": "<Mouse>/middleButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "26d891c2-4de2-44af-b812-613e987a8bf2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "479c2331-ca8a-425f-8934-ee2e7a364c9c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "72b0a28f-81f6-4928-a6b6-17e574f936d6",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "241fe4cb-628c-49f6-9319-9ee4ecb35dd4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "8b63c3f7-bc11-489b-9dd8-5a2c78bf629c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9dbd6546-b322-41cb-a7a2-8f5b27d749d7",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseLook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "412ec960-f70e-40e0-b813-0a81780f4ca2",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchTarget",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "6e3b29a9-89f4-4e1b-b136-b8f4a65f649a",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchTarget",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e6e6b5d3-a8f1-4d31-b53c-379524b7696d",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SwitchTarget",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "bdd57c8c-6551-427e-8c71-b83adc2b53e6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}